[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Player/chibi_player_bullet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/chibi_player_crit_bullet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "crit",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 2 )

[node name="Bullet" type="RigidBody2D"]
collision_layer = 32
collision_mask = 260
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 10
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="EnemyCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 256
collide_with_areas = true

[node name="BreakableBlockCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 1024

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
